--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,22 +64,22 @@ dependencies {
     ext.okHttp_version = '3.7.0'
     ext.retrofit_conventer_gson_version = '2.3.0'
     ext.googlePlayServicesVersion = '16.1.0'
-    ext.lifecycle_version = '1.1.1'
+    ext.lifecycle_version = '2.0.0-beta01'
     ext.dagger_version = '2.21'
 
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'com.android.support:appcompat-v7:28.0.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-    implementation "com.android.support:support-v4:28.0.0"
-    implementation 'com.android.support:recyclerview-v7:28.0.0'
+    implementation 'androidx.appcompat:appcompat:1.0.0-beta01'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0-beta01'
+    implementation 'androidx.recyclerview:recyclerview:1.0.0-beta01'
     implementation "com.google.android.gms:play-services-location:16.0.0"
     testImplementation 'junit:junit:4.12'
 
     //instrumentation test
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    androidTestImplementation 'androidx.test:runner:1.1.0-alpha4'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-alpha4'
     androidTestImplementation 'com.github.tmurakami:dexopener:2.0.2'
 
     // Retrofit
@@ -96,12 +96,12 @@ dependencies {
     //android-architecture-component
     //ViewModel
     // ViewModel and LiveData
-    implementation "android.arch.lifecycle:extensions:$lifecycle_version"
-    implementation "android.arch.lifecycle:runtime:$lifecycle_version"
-    kapt "android.arch.lifecycle:compiler:$lifecycle_version" // use kapt for Kotlin
-    implementation "android.arch.lifecycle:reactivestreams:$lifecycle_version"
-    testImplementation "android.arch.core:core-testing:$lifecycle_version"
-    androidTestImplementation "android.arch.core:core-testing:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-runtime:$lifecycle_version"
+    kapt "androidx.lifecycle:lifecycle-compiler:$lifecycle_version" // use kapt for Kotlin
+    implementation "androidx.lifecycle:lifecycle-reactivestreams:$lifecycle_version"
+    testImplementation "androidx.arch.core:core-testing:$lifecycle_version"
+    androidTestImplementation "androidx.arch.core:core-testing:$lifecycle_version"
 
     // Unit Test
     testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:2.1.0"
@@ -111,7 +111,7 @@ dependencies {
     androidTestImplementation 'org.mockito:mockito-android:2.24.5'
 
     implementation 'joda-time:joda-time:2.10.1'
-    androidTestImplementation 'com.android.support.test:rules:1.0.2'
+    androidTestImplementation 'androidx.test:rules:1.1.0-alpha4'
 
     //dagger
     // Add Dagger dependencies
