--- a/gradle.properties
+++ b/gradle.properties
@@ -16,3 +16,5 @@ kotlin.code.style=official
 
 
 APIXU_API_KEY= "1a13d4c63a7f7e9b6d20b784b17f1ad7"
+android.useAndroidX=true
+android.enableJetifier=true
