--- a/gradle.properties
+++ b/gradle.properties
@@ -15,6 +15,6 @@ org.gradle.jvmargs=-Xmx1536m
 kotlin.code.style=official
 
 
-APIXU_API_KEY= "1a13d4c63a7f7e9b6d20b784b17f1ad7"
+API_KEY= "1a13d4c63a7f7e9b6d20b784b17f1ad7"
 android.useAndroidX=true
 android.enableJetifier=true
